# snake-game-bevy

./: Cargo.toml  README.md
.github/workflows/: ci.yml  release.yml
resources/: snake-game-bevy.desktop
src/: main.rs
